[package]
name = "drone_network"
version = "0.13.1"
edition = "2024"

[dependencies]
rand = "0.9.0"
plotters = "0.3.7"
petgraph = "0.6.5"
rustworkx-core = "0.15.1"
ctrlc-async = "3.2.2"
clap = "4.5.21"
log = "0.4.22"
env_logger = "0.11.6"
chrono = "0.4.39"
derive_more = { version = "1", features = ["full"] }
thiserror = "2.0.12"
impl_ops = "0.1.1"
